<resources>
    <string name="app_name">WinChatAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="action_group_members">Members</string>
    <string name="action_group_file">File</string>
    <!-- Strings used for fragments for navigation -->
    <string name="friendlist_fragment_label">Friend List</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="login_fragment_label">Login</string>
    <string name="register_fragment_label">Register</string>
    <string name="chat_fragment_label">Chat</string>
    <string name="group_file_list_fragment_label">File</string>
    <string name="group_members_list_fragment_label">Members</string>

    <string name="choice_title">Choose Action</string>

    <string name="toast_ID_copied">ID Copied</string>
    <string name="toast_invalid_input">Invalid Input</string>
    <string name="toast_get_data">Getting Data</string>
    <string name="toast_invalid_group">Invalid Group</string>
    <string name="toast_login">Please Login First</string>
    <string name="toast_login_success">Login Success, ID: %1$d</string>
    <string name="toast_join_group_failed">Join Group %1$d Failed</string>
    <string name="toast_quit_group_failed">Quit Group %1$d Failed</string>
    <string name="toast_quit_group_success">Quit Group %1$d Succeeded</string>
    <string name="toast_send_file_failed_server_refused">Send file failed: sever refused</string>
    <string name="toast_send_file_failed_file_not_found">Send file failed: file not found</string>
    <string name="toast_send_file_failed_server_error">Send file failed: server error</string>
    <string name="toast_online_user_count">Online Users: %1$d</string>

    <string name="name_me">Me</string>
    <string name="name_anonymous">Anonymous</string>
    <string name="filename_unknown">File: unknown</string>

    <string name="dialog_add_user">Add User</string>
    <string name="dialog_join_group">Join Group</string>
    <string name="dialog_notice">Notice</string>

    <string name="settings_network">Network</string>
    <string name="settings_server_ep">Server Endpoint</string>
    <string name="settings_server_ep_sum">ip:port</string>
</resources>
