<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="top.fumiama.winchatandroid.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_group_members"
        android:orderInCategory="200"
        android:title="@string/action_group_members"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_group_file"
        android:orderInCategory="300"
        android:title="@string/action_group_file"
        android:visible="false"
        app:showAsAction="never" />
</menu>