<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FriendListFragment">

    <fragment
        android:id="@+id/FriendListFragment"
        android:name="top.fumiama.winchatandroid.FriendListFragment"
        android:label="@string/friendlist_fragment_label"
        tools:layout="@layout/fragment_friendlist">

        <action
            android:id="@+id/action_FriendListFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left_exit"
            app:popExitAnim="@anim/slide_in_right_exit" />
        <action
            android:id="@+id/action_FriendListFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left_exit"
            app:popExitAnim="@anim/slide_in_right_exit" />
        <action
            android:id="@+id/action_FriendListFragment_to_ChatFragment"
            app:destination="@id/ChatFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left_exit"
            app:popExitAnim="@anim/slide_in_right_exit" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="top.fumiama.winchatandroid.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="top.fumiama.winchatandroid.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left_exit"
            app:popExitAnim="@anim/slide_in_right_exit" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="top.fumiama.winchatandroid.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">
    </fragment>
    <fragment
        android:id="@+id/ChatFragment"
        android:name="top.fumiama.winchatandroid.ChatFragment"
        android:label="@string/chat_fragment_label"
        tools:layout="@layout/fragment_chat">
    </fragment>
</navigation>
